# RISC-V-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  judge.py  main.cpp
doc/: reference.md  todo.md
src/: .clang-format  CMakeLists.txt
src/common/: utils.cpp
src/include/common/: config.h  utils.h
src/include/container/: circular_queue.hpp
src/include/instruction/: riscv_general_type.h  riscv_ins.h  riscv_ins_type.h
src/include/instructions/: b_ins.h  btype_ins.h  i_ins.h  itype_ins.h  j_ins.h  jtype_ins.h  parser.h  r_ins.h  riscv_ins.h  riscv_type_ins.h  rtype_ins.h  s_ins.h  stype_ins.h  u_ins.h  utype_ins.h
src/include/prediction/: branch_prediction.h  branch_predictor.h
src/include/storage/: common_data_bus.h  instruction_queue.h  load_buffer.h  load_store_buffer.h  memory.h  register.h  registers.h  reorder_buffer.h  reservation_station.h  tomasulo.h
src/include/tomasulo/: tomasulo.h  tomasulo_state.h
src/instruction/: riscv_ins.cpp  riscv_ins_type.cpp
src/instructions/: b_ins.cpp  btype_ins.cpp  i_ins.cpp  itype_ins.cpp  j_ins.cpp  jtype_ins.cpp  parser.cpp  r_ins.cpp  rtype_ins.cpp  s_ins.cpp  stype_ins.cpp  test.cpp  u_ins.cpp  utype_ins.cpp
src/prediction/: branch_predictor.cpp
src/storage/: common_data_bus.cpp  instruction_queue.cpp  load_store_buffer.cpp  memory.cpp  register.cpp  registers.cpp  reorder_buffer.cpp  reservation_station.cpp  tomasulo.cpp
src/tomasulo/: tomasulo.cpp  tomasulo_state.cpp
src/unit/: arithmetic_logic_unit.cpp  memory_cell.cpp
test/: CMakeLists.txt
test/input/: test_utils.cpp
(+2 files in other folders)
